--- a/packages/strapi-plugin-upload/package.json
+++ b/packages/strapi-plugin-upload/package.json
@@ -23,9 +23,9 @@
     "react-router-dom": "^5.0.0",
     "react-transition-group": "^2.5.0",
     "reactstrap": "^5.0.0",
-    "strapi-helper-plugin": "3.0.0-beta.15",
-    "strapi-provider-upload-local": "3.0.0-beta.15",
-    "strapi-utils": "3.0.0-beta.15",
+    "strapi-helper-plugin": "file:../strapi-helper-plugin",
+    "strapi-provider-upload-local": "file:../strapi-provider-upload-local",
+    "strapi-utils": "file:../strapi-utils",
     "stream-to-array": "^2.3.0",
     "uuid": "^3.2.1"
   },
