--- a/packages/strapi-admin/package.json
+++ b/packages/strapi-admin/package.json
@@ -72,8 +72,8 @@
     "sanitize.css": "^4.1.0",
     "sass-loader": "^7.1.0",
     "shelljs": "^0.7.8",
-    "strapi-helper-plugin": "3.0.0-beta.15",
-    "strapi-utils": "3.0.0-beta.15",
+    "strapi-helper-plugin": "file:../strapi-helper-plugin",
+    "strapi-utils": "file:../strapi-utils",
     "style-loader": "^0.23.1",
     "styled-components": "^4.2.0",
     "terser-webpack-plugin": "^1.2.3",
